feat: remove top padding of p-tree

--- a/src/styles.less
+++ b/src/styles.less
@@ -28,6 +28,10 @@ h6 {
 .p-card .p-card-footer {
   padding: 0;
 }
+.p-tree {
+  border: 0;
+  padding-top: 0;
+}
 
 .max-w-500 {
   max-width: 500px;
@@ -68,8 +72,4 @@ h6 {
 
 .cursor-pointer {
   cursor: pointer;
-}
-
-.p-tree {
-  border: 0;
 }
