feat: add translations for vols and works
* chore: update api pkg

* refactor: adjust for api pkg changes

* feat: add translations

* fix: use new translation paths in works-menu store

* test: fix tests

* fix: fix works translation in paragraph-dialog

* feat: remove top padding of p-tree

* fix: add commas to KrV translations

* fix: fix choice between abbrev and title

* fix: fix lang change not being reflected in url

* test: add tests for language store

* chore: add names to workflow steps

--- a/src/app/search/presentational/paragraph-dialog/paragraph-dialog.component.html
+++ b/src/app/search/presentational/paragraph-dialog/paragraph-dialog.component.html
@@ -2,7 +2,7 @@
   [(visible)]="isVisible"
   [modal]="true"
   (onHide)="onHide()"
-  header="{{ info.workTitle }} #{{ info.index }}"
+  header="{{ 'WORKS.' + info.workCode | translate }} #{{ info.index }}"
 >
   <div class="max-w-600 mb-3" [innerHTML]="info.match.text | pagination"></div>
 
