feat: implement not-found page

--- a/src/app/app/not-found/not-found.component.html
+++ b/src/app/app/not-found/not-found.component.html
@@ -1,1 +1,5 @@
-<p>not-found works!</p>
+<div class="flex justify-content-center">
+  <div class="max-w-550">
+    <p>{{ "NOT-FOUND.TEXT" | translate }}</p>
+  </div>
+</div>
