refactor: adjust i18n strings and translations

--- a/src/app/common/shared/input-group/input-group.component.html
+++ b/src/app/common/shared/input-group/input-group.component.html
@@ -12,7 +12,7 @@
   <div class="col-1 mt-3 flex justify-content-center">
     <i
       class="pi pi-info-circle"
-      pTooltip="{{ i18nString + '_INFO' | translate }}"
+      pTooltip="{{ i18nString + '_TOOLTIP' | translate }}"
     ></i>
   </div>
 </div>
