--- a/src/app/search/container/results/results.component.html
+++ b/src/app/search/container/results/results.component.html
@@ -1,6 +1,6 @@
 <div class="flex justify-content-center">
   <div class="max-w-600">
-    <ng-container *ngIf="!(isLoading$ | async)">
+    <ng-container *ngIf="isLoaded$ | async">
       <app-results-input
         [searchString]="(searchString$ | async) || ''"
         (onUpdateEmitter)="onUpdate($event)"
