refactor: rename max-w-* style classes

--- a/src/app/admin/upload/upload.component.html
+++ b/src/app/admin/upload/upload.component.html
@@ -3,7 +3,7 @@
 </p-blockUI>
 
 <div class="flex justify-content-center">
-  <div class="w-full max-w-550">
+  <div class="w-full max-w-minus-1">
     <p-button
       styleClass="p-button-secondary w-full mb-2"
       [label]="'UPLOAD.SELECT_WORK' | translate"
