--- a/src/app/app/startpage/startpage.component.html
+++ b/src/app/app/startpage/startpage.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-content-center">
-  <div class="max-w-550">
+  <div class="max-w-minus-1">
     <p>{{ "STARTPAGE.TEXT" | translate }}</p>
   </div>
 </div>
