--- a/src/app/search/container/search/search.component.html
+++ b/src/app/search/container/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-content-center">
-  <div class="w-full max-w-600">
+  <div class="w-full max-w-base">
     <app-basic-input
       [nodes]="(nodes$ | async) || []"
       (simpleInputEmitter)="onBasicInputChange($event)"
