--- a/src/styles.less
+++ b/src/styles.less
@@ -33,14 +33,14 @@ h6 {
   padding-top: 0;
 }
 
-.max-w-500 {
-  max-width: 500px;
+.max-w-base {
+  max-width: 650px;
 }
-.max-w-550 {
-  max-width: 550px;
-}
-.max-w-600 {
+.max-w-minus-1 {
   max-width: 600px;
+}
+.max-w-minus-2 {
+  max-width: 550px;
 }
 
 .ks-pagination-s {
