--- a/src/app/app/not-found/not-found.component.html
+++ b/src/app/app/not-found/not-found.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-content-center">
-  <div class="max-w-550">
+  <div class="max-w-minus-1">
     <p>{{ "NOT-FOUND.TEXT" | translate }}</p>
   </div>
 </div>
