--- a/src/app/common/shared/works-menu/works-menu.component.html
+++ b/src/app/common/shared/works-menu/works-menu.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-content-center">
-  <div class="max-w-600">
+  <div class="max-w-base">
     <p-tree
       [value]="nodes"
       [filter]="true"
