--- a/src/app/read/presentational/text/text.component.html
+++ b/src/app/read/presentational/text/text.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-content-center">
-  <div class="max-w-550">
+  <div class="max-w-minus-1">
     <ng-container *ngFor="let paragraph of paragraphs">
       <div id="paragraph-{{ paragraph.id }}"></div>
 
@@ -8,7 +8,11 @@
           paragraph.footnoteName ? 'flex justify-content-center' : ''
         }}"
       >
-        <div class="{{ paragraph.footnoteName ? 'max-w-500' : 'max-w-550' }}">
+        <div
+          class="{{
+            paragraph.footnoteName ? 'max-w-minus-2' : 'max-w-minus-1'
+          }}"
+        >
           <p
             style="
               text-align: justify;
