--- a/src/app/search/presentational/checkbox-works-menu/checkbox-works-menu.component.html
+++ b/src/app/search/presentational/checkbox-works-menu/checkbox-works-menu.component.html
@@ -19,7 +19,7 @@
   </ng-template>
 
   <div class="flex justify-content-center">
-    <div class="max-w-600">
+    <div class="max-w-base">
       <p-tree
         [value]="nodes"
         [filter]="true"
