chore: update angular version
* chore: remove api dependency for auto migration

* chore: update 15 to 16

* chore: update other dependencies

* chore: update angular 16 to 17

* chore: update other dependencies

* fix: update code for new api and primeng versions

* refactor: rename max-w-* style classes

* fix: fix unit test

* fix: fix navbar style

* fix: persist language update in store

* chore: update app version

* fix: fix paragraph-dialog heading

* test: adjust testdata

--- a/src/app/search/presentational/paragraph-dialog/paragraph-dialog.component.html
+++ b/src/app/search/presentational/paragraph-dialog/paragraph-dialog.component.html
@@ -2,9 +2,9 @@
   [(visible)]="isVisible"
   [modal]="true"
   (onHide)="onHide()"
-  header="{{ 'WORKS.' + info.workCode | translate }} #{{ info.index }}"
+  header="#{{ info.index }} {{ 'WORKS.' + info.workCode | translate }}"
 >
-  <div class="max-w-600 mb-3" [innerHTML]="info.match.text | pagination"></div>
+  <div class="max-w-base mb-3" [innerHTML]="info.match.text | pagination"></div>
 
   <div class="flex justify-content-end">
     <p-button
