--- a/src/app/search/presentational/result-list/result-list.component.html
+++ b/src/app/search/presentational/result-list/result-list.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="results.length === 0">
-  <div class="flex justify-content-center">
+  <div class="flex justify-content-center mt-6">
     {{ "SEARCH.RESULTS.NONE_FOUND" | translate }}
   </div>
 </ng-container>
