--- a/src/app/read/selection/volumes/volumes.component.html
+++ b/src/app/read/selection/volumes/volumes.component.html
@@ -1,4 +1,6 @@
 <ng-container *ngFor="let vol of volumes">
+  <h2>{{ vol.title }}</h2>
+
   <ng-container *ngFor="let work of vol.works">
     <p (click)="onWorkClick(work.id)" style="cursor: pointer">
       {{ work.title }}
