migrate startpage and not-found to ng-zorro

--- a/src/app/app/not-found/not-found.component.html
+++ b/src/app/app/not-found/not-found.component.html
@@ -1,5 +1,5 @@
-<div class="flex justify-content-center">
-  <div class="max-w-minus-1">
+<div nz-flex nzJustify="center">
+  <div class="max-w-base">
     <p>{{ "NOT-FOUND.TEXT" | translate }}</p>
   </div>
 </div>
