--- a/src/app/app/startpage/startpage.component.html
+++ b/src/app/app/startpage/startpage.component.html
@@ -1,5 +1,5 @@
-<div class="flex justify-content-center">
-  <div class="max-w-minus-1">
+<div nz-flex nzJustify="center">
+  <div class="max-w-base">
     <p>{{ "STARTPAGE.TEXT" | translate }}</p>
   </div>
 </div>
