--- a/src/app/search/criteria/basic-input/basic-input.component.html
+++ b/src/app/search/criteria/basic-input/basic-input.component.html
@@ -1,56 +1,80 @@
-<div class="grid">
-  <div class="col-3 mt-3">
-    <label for="works-selection-dropdown">
-      {{ "SEARCH.INPUT.WORKS_BASIC_LABEL" | translate }}
-    </label>
-  </div>
+<nz-space class="w-full" nzDirection="vertical">
+  <!-- TODO handle this space in a central place -->
+  <div *nzSpaceItem></div>
 
-  <div [ngClass]="'col-8'">
-    <p-dropdown
-      id="works-selection-dropdown"
-      styleClass="w-full"
-      [options]="workSelectOptions"
-      (onChange)="onSelectionGroupChange($event)"
-    >
-      <ng-template pTemplate="selectedItem" let-item>
-        {{ item.label | translate }}
-      </ng-template>
-      <ng-template pTemplate="item" let-item>
-        {{ item.label | translate }}
-      </ng-template>
-    </p-dropdown>
-  </div>
-
-  <div
-    class="col-1"
-    pTooltip="{{
-      (isCustomSelection
-        ? 'SEARCH.INPUT.WORKS_ADVANCED_TOOLTIP'
-        : 'SEARCH.INPUT.WORKS_ADVANCED_TOOLTIP_DISABLED'
-      ) | translate
-    }}"
+  <nz-input-group
+    *nzSpaceItem
+    nzSearch
+    nzSize="large"
+    [nzAddOnAfter]="suffixButton"
   >
-    <p-button
-      icon="pi pi-list"
-      styleClass="p-button-sm p-button-secondary w-full"
-      [disabled]="!isCustomSelection"
-      (onClick)="onWorksMenuClick()"
-    ></p-button>
-  </div>
-</div>
+    <input
+      nz-input
+      class="w-full"
+      [placeholder]="'SEARCH.INPUT.TERMS.PLACEHOLDER' | translate"
+      [ngModel]="searchTerms"
+      (ngModelChange)="onSearchTermsChange($event)"
+      (keyup.enter)="onSubmit()"
+      type="text"
+    />
+  </nz-input-group>
 
-<ks-input-group
-  idString="search-terms-input"
-  i18nString="SEARCH.INPUT.SEARCH_STRING"
->
-  <input
-    pInputText
-    id="search-terms-input"
-    class="w-full"
-    type="text"
-    placeholder="{{ 'SEARCH.INPUT.SEARCH_STRING_PLACEHOLDER' | translate }}"
-    [ngModel]="searchString"
-    (ngModelChange)="onSearchStringChange($event)"
-    (keyup.enter)="onSubmit()"
-  />
-</ks-input-group>
+  <div *nzSpaceItem></div>
+
+  <!-- TODO write message if no volumes exist -->
+  <nz-card
+    *nzSpaceItem
+    [nzTitle]="'SEARCH.INPUT.WORKS.TITLE' | translate"
+    [nzExtra]="worksSelectTitle"
+  >
+    <nz-tree
+      nzCheckable
+      [nzData]="nodes"
+      [nzCheckedKeys]="checkedKeys"
+      (nzCheckedKeysChange)="onCheckedKeysChange($event)"
+    ></nz-tree>
+  </nz-card>
+</nz-space>
+
+<ng-template #suffixButton>
+  <span
+    nz-tooltip
+    [nzTooltipTitle]="
+      !canSearch ? ('SEARCH.INPUT.TERMS.BUTTON.TOOLTIP' | translate) : ''
+    "
+  >
+    <button
+      nz-button
+      nzSearch
+      nzType="primary"
+      nzSize="large"
+      [disabled]="!canSearch"
+      (click)="onSubmit()"
+    >
+      {{ "SEARCH.INPUT.TERMS.BUTTON.LABEL" | translate }}
+    </button>
+  </span>
+</ng-template>
+
+<ng-template #worksSelectTitle>
+  <nz-select
+    class="min-w-400"
+    nzAllowClear
+    nzPlacement="bottomRight"
+    [nzPlaceHolder]="'SEARCH.INPUT.WORKS.SELECT.PLACEHOLDER' | translate"
+    [ngModel]="worksGroup"
+    (ngModelChange)="onSelectChange($event)"
+  >
+    <!-- *ngIf="option !== customGroup" -->
+    @for (option of worksGroupOptions; track option) {
+    <nz-option
+      class="min-w-400"
+      [nzLabel]="
+        'SEARCH.INPUT.WORKS.SELECT.OPTIONS.' + getWorksGroupString(option)
+          | translate
+      "
+      [nzValue]="option"
+    ></nz-option>
+    }
+  </nz-select>
+</ng-template>
