refactor results page (w/o paragraph dialog)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,11 @@
 
 <p-messages></p-messages>
 
-<router-outlet></router-outlet>
+<div nz-flex nzJustify="center">
+  <div class="max-w-base">
+    <router-outlet></router-outlet>
+  </div>
+</div>
 
 <p-button
   class="ks-scroll-to-top"
