--- a/src/app/read/text/toc/section/section.component.html
+++ b/src/app/read/text/toc/section/section.component.html
@@ -7,6 +7,6 @@
   <ks-toc-section
     [level]="level + 1"
     [section]="sec"
-    [headById]="headById"
+    [headByOrdinal]="headByOrdinal"
   ></ks-toc-section>
 </ng-container>
