--- a/src/app/read/text/toc/toc.component.html
+++ b/src/app/read/text/toc/toc.component.html
@@ -2,6 +2,6 @@
   <ks-toc-section
     [level]="1"
     [section]="sec"
-    [headById]="headById"
+    [headByOrdinal]="headByOrdinal"
   ></ks-toc-section>
 </ng-container>
