--- a/src/app/search/results/paragraph-dialog/paragraph-dialog.component.html
+++ b/src/app/search/results/paragraph-dialog/paragraph-dialog.component.html
@@ -1,10 +1,9 @@
-<p-dialog
+<!-- <p-dialog
   [(visible)]="isVisible"
   [modal]="true"
   (onHide)="onHide()"
   header="#{{ metadata.index }} {{ 'WORKS.' + metadata.workCode | translate }}"
 >
-  <!-- TODO -->
   <div class="max-w-base mb-3" [innerHTML]=""></div>
 
   <div class="flex justify-content-end">
@@ -19,4 +18,4 @@
       <i class="pi pi-arrow-right ml-2 mb-1"></i>
     </p-button>
   </div>
-</p-dialog>
+</p-dialog> -->
