--- a/src/app/search/results/result-list/result-list.component.html
+++ b/src/app/search/results/result-list/result-list.component.html
@@ -1,30 +1,38 @@
 <ng-container *ngIf="results.length === 0">
-  <div class="flex justify-content-center mt-6">
-    {{ "SEARCH.RESULTS.NONE_FOUND" | translate }}
+  <div nz-flex nzJustify="center">
+    <p>{{ "SEARCH.RESULTS.NONE_FOUND" | translate }}</p>
   </div>
 </ng-container>
 
 <ng-container *ngIf="results.length > 0">
-  <ng-container *ngFor="let result of results">
-    <div class="mt-6">
-      <div id="results-{{ result.workId }}"></div>
+  <nz-space class="w-full" nzDirection="vertical">
+    <div *nzSpaceItem>
+      <ng-container *ngFor="let result of results">
+        <div id="results-{{ result.workCode }}"></div>
 
-      <p-divider align="center">
-        <b>{{ "WORKS." + getWorkCode(result.workId) | translate }}</b>
-      </p-divider>
+        <nz-divider
+          [nzText]="
+            ('COMMON.VOLUME' | translate) +
+            ' ' +
+            getWorkDividerText(result.workCode)
+          "
+        ></nz-divider>
+
+        <ng-container *ngFor="let hit of result.hits; let i = index">
+          <div
+            id="{{ getAnchorId(result.workCode, hit.ordinal) }}"
+            class="mb-2"
+          >
+            <ks-result-item
+              [index]="i + 1"
+              [workCode]="result.workCode"
+              [workAbbrev]="getWorkAbbreviation(result.workCode)"
+              [hit]="hit"
+              (onClick)="onMatchClick(result.workCode, hit, i + 1)"
+            ></ks-result-item>
+          </div>
+        </ng-container>
+      </ng-container>
     </div>
-
-    <ng-container *ngFor="let hit of result.hits; let i = index">
-      <div id="{{ getAnchorId(result.workId, hit) }}" class="mb-2">
-        <ks-result-item
-          [index]="i + 1"
-          [anchor]="getAnchorId(result.workId, hit)"
-          [workCode]="getWorkCode(result.workId)"
-          [workAbbrev]="getWorkAbbreviation(result.workId)"
-          [hit]="hit"
-          (onClick)="onMatchClick(result.workId, hit, i + 1)"
-        ></ks-result-item>
-      </div>
-    </ng-container>
-  </ng-container>
+  </nz-space>
 </ng-container>
