--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,8 @@
   </div>
 </div>
 
-<p-button
+<!-- TODO move to submodules, use nz-affix -->
+<!-- <p-button
   class="ks-scroll-to-top"
   styleClass="p-button-rounded p-button-secondary p-button-sm"
   icon="pi pi-chevron-up"
@@ -16,4 +17,4 @@
   pTooltip="{{ 'COMMON.SCROLL_TOP_TOOLTIP' | translate }}"
   [showDelay]="500"
   *ngIf="showButton"
-></p-button>
+></p-button> -->
