--- a/src/app/read/text/content/footnote/footnote.component.html
+++ b/src/app/read/text/content/footnote/footnote.component.html
@@ -1,6 +1,8 @@
-<div class="flex justify-content-center">
-  <div class="max-w-minus-2">
-    <!-- TODO: add two-way anchors -->
+<!-- TODO: add two-way anchors -->
+<div nz-flex nzJustify="center">
+  <div class="max-w-minus-2" id="content-{{ footnote?.ordinal }}">
+    <span class="ks-meta-fnref">{{ footnote?.ref }}</span>
+
     <ks-text-block [text]="footnote?.text || ''"></ks-text-block>
   </div>
 </div>
